# oscbf_hardware

./: .gitignore  README.md
oscbf_hardware_python/: setup.cfg  setup.py
oscbf_hardware_python/oscbf_hardware_python/scripts/: debugging_pybullet_sim_node.py  franka_control_node.py  franka_forward_torque.py  read_rosbags.py  ur5e_control_node.py
oscbf_hardware_python/oscbf_hardware_python/utils/: general_utils.py
oscbf_msgs/: CMakeLists.txt  package.xml
src/oscbf_hardware_cpp/: CMakeLists.txt  README.md  package.xml
src/oscbf_hardware_cpp/src/: franka_impedance_controller.cpp
src/oscbf_hardware_python/: package.xml  setup.cfg  setup.py
src/oscbf_hardware_python/oscbf/assets/: frame.urdf
src/oscbf_hardware_python/oscbf/scripts/: debugging_pybullet_sim_node.py  franka_control_node.py  keyboard_teleop_node.py  oculus_node.py  pybullet_sim_node.py  traj_node.py
src/oscbf_hardware_python/oscbf/utils/: rotations_and_transforms.py
src/oscbf_hardware_python/oscbf_hardware_python/core/: manipulation_env.py  manipulator.py  oscbf_configs.py
src/oscbf_hardware_python/oscbf_hardware_python/examples/: cluttered_tabletop.py  dynamic_motion.py  multiple_safety_conditions.py
src/oscbf_hardware_python/oscbf_hardware_python/scripts/: debugging_pybullet_sim_node.py  ee_command_viz.py  franka_control_node.py  oculus_node.py  plot_hardware_demos.py  pybullet_sim_node.py  traj_node.py  validate_urdf_parsing.py  visualize_franka_collision_model.py
src/oscbf_hardware_python/oscbf_hardware_python/utils/: urdf_parser.py
src/oscbf_hardware_python/test/: test_manipulator_dynamics.py
