<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oscbf_hardware_cpp</name>
  <version>0.0.0</version>
  <description>OSCBF controller integration using libfranka and ROS 2.</description>
  
  <maintainer email="danielpmorton@gmail.com">dmorton</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>libfranka</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
